# face_sorter

./: .env.example  .gitignore  README.md  build_cache.py  dedup_images.py  face_sorter.py  mongo_db.py  pyproject.toml  requirements.txt  run_dev.sh  run_sort.py  run_train.py  video_search.ipynb
scripts/: clean_dataset.py
src/face_sorter/: __init__.py  cli.py  cli_web.py  config.py
src/face_sorter/api/: __init__.py  main.py
src/face_sorter/api/routes/: __init__.py  classes.py  filesystem.py  images.py  operations.py  stats.py
src/face_sorter/api/websocket/: __init__.py  manager.py
src/face_sorter/database/: __init__.py  connection.py  repositories.py
src/face_sorter/models/: __init__.py  face.py
src/face_sorter/services/: __init__.py  caching.py  clean.py  deduplication.py  sorting.py  training.py
src/face_sorter/utils/: __init__.py  file_async.py  image.py  logging.py
src/face_sorter/web/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/face_sorter/web/frontend/src/: App.css  App.jsx  App.vue  main.js  main.jsx  router.js  style.css
src/face_sorter/web/frontend/src/components/: FolderPicker.css  FolderPicker.jsx  ImageGallery.css  ImageGallery.jsx  ImageGallery.vue  ProgressBar.css  ProgressBar.jsx  ProgressBar.vue  SkeletonLoader.css  SkeletonLoader.jsx  SkeletonLoader.vue  Toast.css  Toast.jsx  Toast.vue
src/face_sorter/web/frontend/src/services/: api.js  toast.js  validation.js  websocket.js
src/face_sorter/web/frontend/src/views/: Classes.css  Classes.jsx  Classes.vue  Cleaning.css  Cleaning.jsx  Cleaning.vue  Dashboard.css  Dashboard.jsx  Dashboard.vue  Sorting.css  Sorting.css.orig  Sorting.jsx  Sorting.vue  Training.css  Training.jsx  Training.vue  Unsorted.css  Unsorted.jsx  Unsorted.vue
tests/: __init__.py
